--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       # - save_cache:
       #     paths:
       #       - node_modules
-      #    key: v1-dependencies-{{ checksum "package.json" }}
+         key: v1-dependencies-
 
       # run tests!
       # - run: yarn test
