commented out package.json lines

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
             - node_modules
             # - key: v1-dependencies #-{{ checksum "" }}
 
-      # - save_cache:
+      - save_cache:
       #     paths:
       #       - node_modules
          key: v1-dependencies-
