--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,12 +35,12 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-            # - key: v1-dependencies #-{{ checksum "" }}
+            key: v1-dependencies #-{{ checksum "" }}
 
-      - save_cache:
-      #     paths:
-      #       - node_modules
-         key: v1-dependencies-
+      # - save_cache:
+      # #     paths:
+      # #       - node_modules
+      #    key: v1-dependencies-
 
       # run tests!
       # - run: yarn test
