--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-          #  - v1-dependencies-{{ checksum "package.json" }}
+           - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
@@ -35,7 +35,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-            key: v1-dependencies #-{{ checksum "" }}
+            key: v1-dependencies-{{ checksum "package.json" }}
 
       # - save_cache:
       # #     paths:
