--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "javascript-development-environment",
   "version": "1.0.0",
   "description": "JavaScript development environment Pluralsight course by Cory House",
-  "scripts": {
-  },
+  "scripts": {},
   "author": "Micah Joel",
   "license": "",
   "dependencies": {
-    "whatwg-fetch": "1.0.0"
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "6.16.0",
